# review-Backend

./: .gitignore  Dockerfile  README.md  deepseek_response_raw.txt  docker-compose.yml  erl_crash.dump  init-letsencrypt.sh  nginx.conf  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: 문서화.md  테스트.md  환경설정.md
.github/workflows/: deploy.yml
alertmanager/: alertmanager.yml
apiserver/: asgi.py  celery.py  settings.py  tasks.py  urls.py  wsgi.py
oauth/: tests.py  urls.py  views.py
oauth/utils/: loginUtils.py
partreview/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
partreview/migrations/: 0001_initial.py  0002_remove_codereview_mode_remove_codereview_review_and_more.py  0003_alter_codereview_user.py
pr_review/: apps.py  gpttest.py  models.py  views.py
prometheus/: prometheus.yml
pullrequest/: apps.py  gpttest.py  models.py  serializers.py  tests.py  urls.py  views.py
pullrequest/migrations/: 0001_initial.py  0002_alter_prreview_id.py  0002_alter_prreview_total_review.py  0002_remove_prreview_title.py  0003_alter_prreview_total_review.py  0003_prreview_title.py  0004_alter_prreview_id.py
report/: apps.py  models.py  tests.py  urls.py  views.py
report/migrations/: 0001_initial.py  0002_alter_report_table_alter_reportprreview_table.py
repository/: models.py  serializers.py  tests.py  urls.py  views.py
repository/migrations/: 0001_initial.py  (+1 more)
review/: cacheUtils.py  common.py  tasks 복사본.py  tasks.py  urls.py  views.py
review/utils/: common.py  (+3 more)
user/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
(+17 files in other folders)
